samples/_failures_safe/1761457154_b83c54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7c915c8.c: In function ‘main’:
./samples/SAFE/__tmp_c7c915c8.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
